- Improved vertical alignment on table headers (Fixes SparkDevNetwork/Rock-v8-Alpha-Issues#17)

--- a/RockWeb/Styles/_grid.less
+++ b/RockWeb/Styles/_grid.less
@@ -194,10 +194,10 @@ td.wrap-contents {
   border-color: @grid-column-header-border-color;
 
   > a:not(.btn) {
-    display: block;
+    display: inline;
     color: @grid-column-header-text-color;
     &::after{
-      display: inline-block;
+      display: inline;
       width: 15px;
       padding-left: 5px;
       font-family: @fa-font-face;
